Introducing a POST API.
Methods such as nexus.post.create(...) can send post signals to
other sites.

Methods such as nexus.post.respond.[key] are invoked on a success
or failure of a POST call.
Ex: nexus.post.respond.displayJSON presents the json on the page
    nexus.post.respond.error displays an error message in html.

To best test this feature, create two nexpress processes and
post from one to the other.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/NucleaPeon/nexpress",
   "dependencies": {
     "function.create": "*",
+    "request": "*",
     "js-cache": "~1.0.2",
     "ssi": "0.1.5",
     "jsdoc": "3.2.0",
