Removed cookies from nexpress, it belongs in nexpress-auth

--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "jsdoc": "*",
     "http": "*",
     "mime-types": "*",
-    "file": "*",
-    "cookies": "*"
+    "file": "*"
   },
   "devDependencies": {
     "superagent": "*",
