--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexpress",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Not express.js, a quickstart module for serving web content",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/NucleaPeon/nexpress",
   "dependencies": {
+    "cookies" : "*",
     "function.create": "*",
     "request": "*",
     "js-cache": "~1.0.2",
