Added a get request create() method, post logging method for responding to post routes and added request as a dependency. Further testing may reveal we do not require request or we should build more upon it.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/NucleaPeon/nexpress",
   "dependencies": {
+    "request": "*",
     "cookies" : "*",
     "function.create": "*",
     "request": "*",
